17、Kubernetes七层负载均衡Ingress/软件/4.2-ingress-tomcat-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-myapp-tls
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: tomcat.zyf.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tomcat
            port:
              number: 8080
  tls:
  - hosts:
    - tomcat.zyf.com
    secretName: tomcat-ingress-secret
