17、Kubernetes七层负载均衡Ingress/软件/4.4.2-nginx-new-v2.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-new
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-by-header: "user"
    nginx.ingress.kubernetes.io/canary-by-header-value: "kubesre"
spec:
  ingressClassName: nginx
  rules:
  - host: nginx.zyf.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
           name: new-nginx
           port:
            number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: new-nginx
  namespace: default
spec:
  selector:
    app: new-nginx
  ports:
  - name: http
    targetPort: 80
    port: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: new-nginx
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: new-nginx
  template:
    metadata:
      labels:
        app: new-nginx
    spec:
      containers:
      - name: nginx
        image: registry.cn-hangzhou.aliyuncs.com/acs-sample/new-nginx
        ports:
        - name: http
          containerPort: 80
