17、Kubernetes七层负载均衡Ingress/软件/4.4.2-nginx-old.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-old
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: nginx.zyf.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
           name: old-nginx
           port:
            number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: old-nginx
  namespace: default
spec:
  selector:
    app: old-nginx
  ports:
  - name: http
    targetPort: 80
    port: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: old-nginx
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: old-nginx
  template:
    metadata:
      labels:
        app: old-nginx
    spec:
      containers:
      - name: nginx
        image: registry.cn-hangzhou.aliyuncs.com/acs-sample/old-nginx
        ports:
        - name: http
          containerPort: 80
